# sessionkid

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json
docs/app-layout/: README.md  app-structure.md  screen-inventory.md  wireframe-spec.md
docs/requirements/: README.md  product-requirements.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icon.ppm
src-tauri/src/: lib.rs  main.rs
src/components/: ActivityContent.tsx
src/lib/providers/codex/: codexRunner.ts
src/lib/session/: runner.ts  store.ts  types.ts
