[package]
name = "session-kid"
version = "0.1.0"
description = "Session Kid desktop shell"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "session_kid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
